<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/blackred" >

    <TextView
        android:id="@+id/project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/bRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/project_name"
        android:layout_alignParentBottom="true"
        android:background="@drawable/pedal"
        android:text="@string/bRecord"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/black" 
        android:soundEffectsEnabled="false"/>

    <Button
        android:id="@+id/bStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/project_name"
        android:background="@drawable/pedal"
        android:padding="50dp"
        android:text="@string/Stop"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/black"
        android:soundEffectsEnabled="false" />

    <Chronometer
        android:id="@+id/cmCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/project_name"
        android:layout_centerHorizontal="true"
        android:background="@drawable/smallred"
        android:format="%s / 00:00"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Chronometer"
        android:textAlignment="center"
        android:textSize="25sp" />

</RelativeLayout>